-
Bug
-
Resolution: Done
-
P0: Blocker
-
5.13.0 Alpha 1
-
None
-
a93849d026172cbd9197c15997eeea2a73c6b155
https://codereview.qt-project.org/#/c/241574/ Update submodules on 'dev' in qt5
https://testresults.qt.io/coin/integration/qt/qt5/tasks/1539098918
agent:2018/10/03 07:22:07 build.go:193: g++ -c -pipe -g -Og -std=c++1z -fvisibility=hidden -fvisibility-inlines-hidden -fno-exceptions -Wall -W -Wvla -Wdate-time -Wshift-overflow=2 -Wduplicated-cond -Wno-stringop-overflow -D_REENTRANT -fPIC -DQT_BUILD_QMLCHARTS_LIB -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_PLUGIN -DQT_CHARTS_LIB -DQT_QUICK_LIB -DQT_WIDGETS_LIB -DQT_GUI_LIB -DQT_QML_LIB -DQT_NETWORK_LIB -DQT_CORE_LIB -DQT_NAMESPACE=TestNamespace -I/home/qt/work/qt/qtcharts/src/chartsqml2 -I. -I/home/qt/work/qt/qtcharts/src/chartsqml2 -I../../include/QtCharts/5.12.0 -I../../include/QtCharts/5.12.0/QtCharts -I../../include -I../../include/QtCharts -I/home/qt/work/install/include -I/home/qt/work/install/include/QtQuick -I/home/qt/work/install/include/QtWidgets -I/home/qt/work/install/include/QtGui -I/home/qt/work/install/include/QtQml -I/home/qt/work/install/include/QtNetwork -I/home/qt/work/install/include/QtCore -I.moc -isystem /usr/include/libdrm -I/home/qt/work/install/mkspecs/linux-g++ -o .obj/declarativeareaseries.o /home/qt/work/qt/qtcharts/src/chartsqml2/declarativeareaseries.cpp agent:2018/10/03 07:22:08 build.go:193: In file included from /usr/local/include/c++/8.2.0/memory:67, agent:2018/10/03 07:22:08 build.go:193: from .moc/moc_declarativelineseries_p.cpp:9, agent:2018/10/03 07:22:08 build.go:193: from /home/qt/work/qt/qtcharts/src/chartsqml2/declarativelineseries.cpp:112: agent:2018/10/03 07:22:08 build.go:193: /usr/local/include/c++/8.2.0/bits/stl_raw_storage_iter.h:69:22: error: expected template-name before ‘<’ token agent:2018/10/03 07:22:08 build.go:193: : public iterator<output_iterator_tag, void, void, void, void> agent:2018/10/03 07:22:08 build.go:193: ^ agent:2018/10/03 07:22:08 build.go:193: /usr/local/include/c++/8.2.0/bits/stl_raw_storage_iter.h:69:22: error: expected ‘{’ before ‘<’ token agent:2018/10/03 07:22:08 build.go:193: In file included from /usr/local/include/c++/8.2.0/memory:74, agent:2018/10/03 07:22:08 build.go:193: from .moc/moc_declarativelineseries_p.cpp:9, agent:2018/10/03 07:22:08 build.go:193: from /home/qt/work/qt/qtcharts/src/chartsqml2/declarativelineseries.cpp:112: agent:2018/10/03 07:22:08 build.go:193: /usr/local/include/c++/8.2.0/ext/concurrence.h:68:3: error: expected class-name before ‘{’ token agent:2018/10/03 07:22:08 build.go:193: { agent:2018/10/03 07:22:08 build.go:193: ^ agent:2018/10/03 07:22:08 build.go:193: /usr/local/include/c++/8.2.0/ext/concurrence.h:76:3: error: expected class-name before ‘{’ token agent:2018/10/03 07:22:08 build.go:193: { agent:2018/10/03 07:22:08 build.go:193: ^ agent:2018/10/03 07:22:08 build.go:193: /usr/local/include/c++/8.2.0/ext/concurrence.h:84:3: error: expected class-name before ‘{’ token agent:2018/10/03 07:22:08 build.go:193: { agent:2018/10/03 07:22:08 build.go:193: ^ agent:2018/10/03 07:22:08 build.go:193: /usr/local/include/c++/8.2.0/ext/concurrence.h:92:3: error: expected class-name before ‘{’ token agent:2018/10/03 07:22:08 build.go:193: { agent:2018/10/03 07:22:08 build.go:193: ^ agent:2018/10/03 07:22:08 build.go:193: In file included from /usr/local/include/c++/8.2.0/memory:80, agent:2018/10/03 07:22:08 build.go:193: from .moc/moc_declarativelineseries_p.cpp:9, agent:2018/10/03 07:22:08 build.go:193: from /home/qt/work/qt/qtcharts/src/chartsqml2/declarativelineseries.cpp:112: agent:2018/10/03 07:22:08 build.go:193: /usr/local/include/c++/8.2.0/bits/unique_ptr.h:70:9: error: expected nested-name-specifier before ‘enable_if’ agent:2018/10/03 07:22:08 build.go:193: enable_if<is_convertible<_Up*, _Tp*>::value>::type> agent:2018/10/03 07:22:08 build.go:193: ^~~~~~~~~ agent:2018/10/03 07:22:08 build.go:193: /usr/local/include/c++/8.2.0/bits/unique_ptr.h:70:9: error: expected ‘>’ before ‘enable_if’ agent:2018/10/03 07:22:08 build.go:193: /usr/local/include/c++/8.2.0/bits/unique_ptr.h: In member function ‘void QtCharts::std::default_delete<_Tp>::operator()(_Tp*) const’: agent:2018/10/03 07:22:08 build.go:193: /usr/local/include/c++/8.2.0/bits/unique_ptr.h:77:17: error: ‘is_void’ was not declared in this scope agent:2018/10/03 07:22:08 build.go:193: static_assert(!is_void<_Tp>::value, agent:2018/10/03 07:22:08 build.go:193: ^~~~~~~ agent:2018/10/03 07:22:08 build.go:193: /usr/local/include/c++/8.2.0/bits/unique_ptr.h:77:17: note: suggested alternative: agent:2018/10/03 07:22:08 build.go:193: In file included from /home/qt/work/install/include/QtCore/qglobal.h:45, agent:2018/10/03 07:22:08 build.go:193: from /home/qt/work/install/include/QtCore/QtGlobal:1, agent:2018/10/03 07:22:08 build.go:193: from ../../include/QtCharts/../../../qt/qtcharts/src/charts/qchartglobal.h:33, agent:2018/10/03 07:22:08 build.go:193: from ../../include/QtCharts/qchartglobal.h:1, agent:2018/10/03 07:22:08 build.go:193: from ../../include/QtCharts/QChartGlobal:1, agent:2018/10/03 07:22:08 build.go:193: from ../../include/QtCharts/../../../qt/qtcharts/src/charts/linechart/qlineseries.h:33, agent:2018/10/03 07:22:08 build.go:193: from ../../include/QtCharts/qlineseries.h:1, agent:2018/10/03 07:22:08 build.go:193: from ../../include/QtCharts/QLineSeries:1, agent:2018/10/03 07:22:08 build.go:193: from /home/qt/work/qt/qtcharts/src/chartsqml2/declarativelineseries_p.h:42, agent:2018/10/03 07:22:08 build.go:193: from /home/qt/work/qt/qtcharts/src/chartsqml2/declarativelineseries.cpp:30: agent:2018/10/03 07:22:08 build.go:193: /usr/local/include/c++/8.2.0/type_traits:202:12: note: ‘std::is_void’ agent:2018/10/03 07:22:08 build.go:193: struct is_void agent:2018/10/03 07:22:08 build.go:193: ^~~~~~~ agent:2018/10/03 07:22:08 build.go:193: In file included from /usr/local/include/c++/8.2.0/memory:80, agent:2018/10/03 07:22:08 build.go:193: from .moc/moc_declarativelineseries_p.cpp:9, agent:2018/10/03 07:22:08 build.go:193: from /home/qt/work/qt/qtcharts/src/chartsqml2/declarativelineseries.cpp:112: agent:2018/10/03 07:22:08 build.go:193: /usr/local/include/c++/8.2.0/bits/unique_ptr.h:77:28: error: expected primary-expression before ‘>’ token agent:2018/10/03 07:22:08 build.go:193: static_assert(!is_void<_Tp>::value, agent:2018/10/03 07:22:08 build.go:193: ^ agent:2018/10/03 07:22:08 build.go:193: /usr/local/include/c++/8.2.0/bits/unique_ptr.h:77:31: error: ‘::value’ has not been declared agent:2018/10/03 07:22:08 build.go:193: static_assert(!is_void<_Tp>::value, agent:2018/10/03 07:22:08 build.go:193: ^~~~~ agent:2018/10/03 07:22:08 build.go:193: /usr/local/include/c++/8.2.0/bits/unique_ptr.h:77:31: note: suggested alternative: ‘valloc’ agent:2018/10/03 07:22:08 build.go:193: static_assert(!is_void<_Tp>::value, agent:2018/10/03 07:22:08 build.go:193: ^~~~~ agent:2018/10/03 07:22:08 build.go:193: valloc agent:2018/10/03 07:22:08 build.go:193: /usr/local/include/c++/8.2.0/bits/unique_ptr.h: At global scope: agent:2018/10/03 07:22:08 build.go:193: /usr/local/include/c++/8.2.0/bits/unique_ptr.h:105:9: error: expected nested-name-specifier before ‘enable_if’ agent:2018/10/03 07:22:08 build.go:193: enable_if<is_convertible<_Up(*)[], _Tp(*)[]>::value>::type> agent:2018/10/03 07:22:08 build.go:193: ^~~~~~~~~ agent:2018/10/03 07:22:08 build.go:193: /usr/local/include/c++/8.2.0/bits/unique_ptr.h:105:9: error: expected ‘>’ before ‘enable_if’ agent:2018/10/03 07:22:08 build.go:193: /usr/local/include/c++/8.2.0/bits/unique_ptr.h:110:16: error: expected nested-name-specifier before ‘enable_if’ agent:2018/10/03 07:22:08 build.go:193: typename enable_if<is_convertible<_Up(*)[], _Tp(*)[]>::value>::type agent:2018/10/03 07:22:08 build.go:193: ^~~~~~~~~ agent:2018/10/03 07:22:08 build.go:193: /usr/local/include/c++/8.2.0/bits/unique_ptr.h:110:25: error: expected initializer before ‘<’ token agent:2018/10/03 07:22:08 build.go:193: typename enable_if<is_convertible<_Up(*)[], _Tp(*)[]>::value>::type agent:2018/10/03 07:22:08 build.go:193: ^ agent:2018/10/03 07:22:08 build.go:193: /usr/local/include/c++/8.2.0/bits/unique_ptr.h:130:17: error: ‘__void_t’ was not declared in this scope agent:2018/10/03 07:22:08 build.go:193: _Ptr<_Up, _Ep, __void_t<typename remove_reference<_Ep>::type::pointer>> agent:2018/10/03 07:22:08 build.go:193: ^~~~~~~~ ...
Many (more then half) builds failed...