Fix charts build issue

Including mocs inside charts namespace causes compilation errors,
so move them outside the namespace.

Task-number: QTBUG-70907
Change-Id: I01d232ef0717cc7e76a751b827f29ed92fd0da53
Reviewed-by: Jędrzej Nowacki <jedrzej.nowacki@qt.io>